Add voice message transcription logic